cabal-version:      3.0
name:               jet-stream
version:            1.0.0.0

synopsis:           Yet another streaming library.
description:
  This is a streaming library focused on simplicity at the cost of some
  expressivity.

  Basic operations like `drop` and `take` are supported.

  The `Functor`, `Applicative` and `Monad` instances of the stream type
  resemble those of pure lists. There are also `Alternative`/`MonadPlus`
  instances for stream concatenation.

  Typical `IO` resource-managing operations like `withFile` can be easily
  lifted to streams.

  For expressive and composable terminal operations, streams can be consumed
  with folds from the "foldl" library.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Diaz Carrete
maintainer:         diaz_carrete@yahoo.com
category:           Control
extra-source-files: 
    CHANGELOG.md, 
    README.md,
    .gitignore
source-repository    head
    type:     git
    location: https://github.com/danidiaz/jet-stream.git

common common
    build-depends:    base >= 4.11.0.0 && < 5,
    default-language: Haskell2010

library
    import:           common
    exposed-modules:  Jet
    build-depends:    
    hs-source-dirs:   lib

test-suite tests
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          tests.hs
    build-depends:    
      tasty           ^>= 1.3.1,
      tasty-hunit     ^>= 0.10.0.2,
      jet

